--- a/umll/package.json
+++ b/umll/package.json
@@ -14,6 +14,7 @@
     "knex": "<0.20.0",
     "koa-body": "^4.2.0",
     "mime-types": "^2.1.27",
+    "pg": "^8.5.1",
     "sqlite3": "5.0.0",
     "strapi": "3.4.5",
     "strapi-admin": "3.4.5",
@@ -25,6 +26,7 @@
     "strapi-plugin-upload": "3.4.5",
     "strapi-plugin-users-permissions": "3.4.5",
     "strapi-provider-email-sendgrid": "^3.4.6",
+    "strapi-provider-upload-aws-s3": "^3.4.6",
     "strapi-utils": "3.4.5"
   },
   "author": {
